[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/slime.png" type="Texture" id=1]
[ext_resource path="res://src/Blob.gd" type="Script" id=2]
[ext_resource path="res://assets/cat-traits-small.png" type="Texture" id=3]
[ext_resource path="res://assets/pig-traits-small.png" type="Texture" id=4]
[ext_resource path="res://assets/dog-traits-small.png" type="Texture" id=5]
[ext_resource path="res://assets/deer-traits-small.png" type="Texture" id=6]
[ext_resource path="res://assets/bird-traits-small.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 192, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 384, 576, 192, 192 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 91, 90 )

[node name="Blob" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
frame = 4
playing = true

[node name="PigTraits" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="BirdTraits" type="Sprite" parent="."]
position = Vector2( -1.13687e-13, -1.90735e-06 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 140, 64 )

[node name="CatTraits" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="DogTraits" type="Sprite" parent="."]
position = Vector2( -24, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 80, 64 )

[node name="DeerTraits" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, -24 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 90, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 17 )
